venndb-usage/tests/fails/derive_enum.rs
use venndb::VennDB;

#[derive(VennDB)]
enum MyEnum {
    A,
    B,
}

fn main() {}
