venndb-usage/tests/fails/derive_enum.stderr
error: `#[derive(VennDB)]` cannot be applied to enums
 --> tests/fails/derive_enum.rs:4:1
  |
4 | enum MyEnum {
  | ^^^^
